# hacktech

./: CMakeCache.txt  CMakeLists.txt  DisplayImage  Email.cpp  Makefile  README.md  TessOp  TessOp.cpp  cmake_install.cmake  index.php  runocr.py  shahidsnasty.py  test.php  wsgi.py
SendPhoto/SendPhoto/: AppDelegate.h  AppDelegate.m  SendPhoto-Info.plist  main.m
SendPhoto/SendPhoto.xcodeproj/: project.pbxproj
SendPhoto/SendPhoto.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SendPhoto/SendPhoto.xcodeproj/project.xcworkspace/xcshareddata/: SendPhoto.xccheckout
SendPhoto/SendPhoto.xcodeproj/project.xcworkspace/xcuserdata/adr2370.xcuserdatad/: UserInterfaceState.xcuserstate
SendPhoto/SendPhoto.xcodeproj/xcuserdata/adr2370.xcuserdatad/xcschemes/: SendPhoto.xcscheme  xcschememanagement.plist
SendPhoto/SendPhotoTests/: SendPhotoTests-Info.plist  SendPhotoTests.m
Tesseract/Tesseract/: Tesseract.1  main.cpp
Tesseract/Tesseract.xcodeproj/: project.pbxproj
Tesseract/Tesseract.xcodeproj/project.xcworkspace/xcshareddata/: Tesseract.xccheckout
Tesseract/Tesseract.xcodeproj/project.xcworkspace/xcuserdata/adr2370.xcuserdatad/: UserInterfaceState.xcuserstate
Tesseract/Tesseract.xcodeproj/xcuserdata/adr2370.xcuserdatad/xcschemes/: Tesseract.xcscheme  xcschememanagement.plist
sendgrid-parse-demo-master/: parselog.txt
